change height of profile section

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,5 +1,6 @@
 #app {
-  font-family: "Roboto", "Avenir", "Helvetica Neue", Arial, sans-serif;
+  font-family: "Lato Light", "Roboto", "Avenir", "Helvetica Neue", Arial,
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
@@ -29,17 +30,18 @@ li {
 
 a {
   color: #42b983;
+  text-decoration: none;
   &:hover {
     color: red;
   }
 }
 
 .main {
-  border: 5px solid #bbb;
+  // border: 5px solid #bbb;
   margin: 2rem 0;
   padding: 1rem 2rem;
   box-shadow: 0 5px 35px rgba(0, 0, 0, 0.25);
-  background-color: beige;
+  background-color: white;
   color: black;
   width: 80vw;
   clear: both;
