change formatting of profile component

--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -1,9 +1,11 @@
 #header {
   display: flex;
-  height: 100vh;
+  height: 80vh;
   width: 100vw;
   margin: 0;
   overflow: hidden;
+  border-top: 50px solid white;
+  border-bottom: 50px solid white;
 }
 
 #left,
