--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -8,9 +8,9 @@
   box-sizing: border-box;
   font-weight: 300;
   overflow: hidden;
-  // display: flex;
-  // flex-wrap: wrap;
-  // justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 h1,
@@ -18,6 +18,10 @@ h2,
 h3 {
   font-weight: normal;
   font-family: "Abril Fatface", serif;
+}
+
+h4 {
+  font-family: Didot;
 }
 
 ul {
@@ -48,7 +52,7 @@ a {
   width: 80vw;
   clear: both;
 
-  &:nth-child(2n) {
-    float: right;
-  }
+  // &:nth-child(2n) {
+  //   float: right;
+  // }
 }
