--- a/src/stylesheets/Skills.scss
+++ b/src/stylesheets/Skills.scss
@@ -1,9 +1,14 @@
+.main {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
 .skills-section {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   padding: 1rem;
-  width: 80%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   /* border: 1px solid black; */
