--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -46,7 +46,7 @@ a {
   // border: 5px solid #bbb;
   margin: 2rem 0;
   padding: 2rem 4rem;
-  box-shadow: 0 5px 35px rgba(0, 0, 0, 0.25);
+  // box-shadow: 0 5px 35px rgba(0, 0, 0, 0.25);
   background-color: white;
   color: black;
   width: 80vw;
