remove header top border

--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-  border-top: 30px solid white;
+  // border-top: 30px solid white;
   border-bottom: 30px solid white;
 }
 
