--- a/src/stylesheets/Skills.scss
+++ b/src/stylesheets/Skills.scss
@@ -1,8 +1,3 @@
-.main {
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-}
 .skills-section {
   display: flex;
   flex-wrap: wrap;
@@ -23,6 +18,7 @@
   .skill-title {
     width: 100%;
     text-align: center;
+    margin-right: 0;
   }
 
   .skills-section {
