--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -6,7 +6,7 @@
   padding: 0;
   overflow: hidden;
   // border-top: 30px solid white;
-  border-bottom: 30px solid white;
+  border: 30px solid white;
 }
 
 #left,
