--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -45,12 +45,12 @@ a {
 }
 
 .main {
-  // border: 5px solid #bbb;
   // box-shadow: 0 5px 35px rgba(0, 0, 0, 0.25);
   margin: 2rem 0;
   padding: 2rem 4rem;
   background-color: white;
   color: black;
+  border: 3px solid black;
   width: 60vw;
   clear: both;
   box-sizing: border-box;
@@ -70,6 +70,7 @@ a {
     width: 80vw;
   }
 }
+
 .wrapper {
   padding: 0;
   width: 100%;
@@ -86,7 +87,7 @@ a {
   border-right: 25px solid transparent;
   border-bottom: 25px solid white;
   left: 50%;
-  top: 8px;
+  top: 7px;
   transform: translate(-50%, 0);
   z-index: 1;
   position: absolute;
