--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -15,12 +15,11 @@
   justify-content: center;
 }
 
-h1,
-h2,
-h3 {
-  font-weight: normal;
-  font-family: "Abril Fatface", serif;
-}
+// h1,
+// h2,
+// h3 {
+//   font-weight: normal;
+// }
 
 h4 {
   font-family: Didot;
