--- a/src/stylesheets/_fonts.scss
+++ b/src/stylesheets/_fonts.scss
@@ -1,2 +1,3 @@
 // @import url("https://fonts.googleapis.com/css?family=Oswald&display=swap");
 // Need to import Abril Fatface and Lato
+@import url("https://fonts.googleapis.com/css?family=Abril+Fatface|Lato&display=swap");
