--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,14 +1,13 @@
 @import "../stylesheets/_variables.scss";
 
 #app {
-  font-family: "Lato Light", "Roboto", "Avenir", "Helvetica Neue", Arial,
-    sans-serif;
+  font-family: "Lato", "Roboto", "Avenir", "Helvetica Neue", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: rgb(201, 182, 76);
   box-sizing: border-box;
-  font-weight: 300;
+  font-weight: 400;
   overflow: hidden;
   display: flex;
   flex-wrap: wrap;
