--- a/src/stylesheets/Skills.scss
+++ b/src/stylesheets/Skills.scss
@@ -2,18 +2,19 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  padding: 1rem;
+  justify-content: center;
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
   /* border: 1px solid black; */
 }
+
 .skill-title {
   width: 150px;
-  text-align: right;
-  margin-right: 1rem;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
   /* border: 1px solid black; */
 }
+
 @media (max-width: 426px) {
   .skill-title {
     width: 100%;
