--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -14,11 +14,10 @@
   justify-content: center;
 }
 
-// h1,
-// h2,
-// h3 {
-//   font-weight: normal;
-// }
+h2,
+h3 {
+  margin-bottom: -10px;
+}
 
 h4 {
   font-family: Didot;
@@ -103,4 +102,9 @@ a {
 
 .highlight {
   background-color: palegoldenrod;
+}
+
+::-webkit-scrollbar {
+  width: 0px; /* remove scrollbar space */
+  background: transparent;
 }
