change project title

--- a/src/stylesheets/Project.scss
+++ b/src/stylesheets/Project.scss
@@ -35,6 +35,10 @@
   box-shadow: 5px 5px 35px rgba(155, 155, 155, 0.5);
 }
 
+.proj-title {
+  font-family: Didot;
+}
+
 .row {
   display: flex;
   flex-wrap: wrap;
