change colour variable names

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -96,7 +96,7 @@ a {
 .underline {
   height: 5px;
   width: 80px;
-  background-color: $secondary;
+  background-color: $paleturquoise;
   display: inline-block;
 }
 
