--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -1,3 +1,4 @@
-$primary: #edeafd;
+$palepurple: #edeafd;
 $darkgold: #d79922;
-$secondary: paleturquoise;
+$paleturquoise: paleturquoise;
+$vuegreen: #42b983;
