flash message when not all fields are filled

--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -2,4 +2,5 @@ $palepurple: #edeafd;
 $darkgold: #d79922;
 $paleturquoise: paleturquoise;
 $vuegreen: #42b983;
-$success: rgb(245, 225, 171);
+$success: #dcffed;
+$failure: #ffdcee;
