fix formatting of links

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -45,7 +45,7 @@ a {
 
 .main {
   // box-shadow: 0 5px 35px rgba(0, 0, 0, 0.25);
-  margin: 2rem 0;
+  margin: 2rem 0 50px 2rem;
   padding: 2rem 4rem;
   background-color: white;
   color: black;
