add hover effect to x button on flash banner

--- a/src/stylesheets/Contact.scss
+++ b/src/stylesheets/Contact.scss
@@ -23,6 +23,10 @@ h3 {
 
   span {
     margin-left: 0.5rem;
+    &:hover {
+      text-shadow: 0 0 5px $darkgold;
+      cursor: pointer;
+    }
   }
 }
 
