add pointer cursor to overlay area
This is to indicate to visitors that they can click on the overlay area to exit the lightbox

--- a/src/stylesheets/Project.scss
+++ b/src/stylesheets/Project.scss
@@ -19,6 +19,7 @@
   transform: translate(-50%, -50%);
   background-color: white;
   overflow: scroll;
+  cursor: default;
 
   p {
     margin-left: auto;
