--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -1,6 +1,6 @@
 $palepurple: #edeafd;
 $darkgold: #d79922;
 $paleturquoise: paleturquoise;
-$vuegreen: #42b983;
+$vuegreen: #90cab0;
 $success: #dcffed;
 $failure: #ffdcee;
