display contact links using icons instead of text

--- a/src/stylesheets/Contact.scss
+++ b/src/stylesheets/Contact.scss
@@ -64,12 +64,13 @@ form,
   align-items: center;
 }
 
-.form-group,
-.link-group {
+.form-group {
   width: 80%;
-  display: block;
 }
 
+.link-group {
+  margin: 0.5rem;
+}
 label {
   margin: 0.5rem 0.5rem 0 0.5rem;
   display: block;
@@ -87,4 +88,14 @@ textarea {
 
 input {
   height: 1.6rem;
+}
+
+img {
+  width: 50px;
+}
+
+#links {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
