--- a/src/stylesheets/Project.scss
+++ b/src/stylesheets/Project.scss
@@ -6,11 +6,11 @@
 .description {
   width: 90%;
   height: 90%;
-  position: fixed;
-  z-index: 10;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  // position: fixed;
+  // z-index: 10;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
   background-color: white;
   overflow: scroll;
   cursor: default;
