--- a/src/stylesheets/Project.scss
+++ b/src/stylesheets/Project.scss
@@ -1,11 +1,11 @@
 .description-container {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 .description {
-  width: 90%;
-  height: 90%;
+  width: 100vw;
+  height: 100vh;
   // position: fixed;
   // z-index: 10;
   // top: 50%;
