--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -45,7 +45,7 @@ a {
 
 .main {
   // box-shadow: 0 5px 35px rgba(0, 0, 0, 0.25);
-  margin: 2rem 0 50px 2rem;
+  margin: 2rem auto;
   padding: 2rem 4rem;
   background-color: white;
   color: black;
@@ -53,8 +53,6 @@ a {
   width: 60vw;
   clear: both;
   box-sizing: border-box;
-  margin-left: auto;
-  margin-right: auto;
   position: relative;
 }
 
@@ -62,6 +60,7 @@ a {
   .main {
     width: 100vw;
     padding: 1rem 2rem;
+    margin-bottom: 0.5rem;
   }
 }
 
