--- a/src/stylesheets/Project.scss
+++ b/src/stylesheets/Project.scss
@@ -1,3 +1,4 @@
+@import "./variables.scss";
 .description-container {
   width: 100vw;
   height: 100vh;
@@ -61,6 +62,25 @@
 
 .image-container {
   margin: 1rem;
+}
+
+h3 {
+  margin-bottom: 10px;
+}
+
+.close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: transparent;
+  font-weight: 900;
+  font-size: 1.2rem;
+  color: #555;
+
+  &:hover {
+    background-color: $vuegreen;
+    color: white;
+  }
 }
 
 @media (max-width: 426px) {
