--- a/src/stylesheets/Contact.scss
+++ b/src/stylesheets/Contact.scss
@@ -1,5 +1,22 @@
 @import "../stylesheets/_variables.scss";
 
+h3 {
+  margin-bottom: 10px;
+}
+
+h4 {
+  font-family: "Lato", "Roboto", "Avenir", "Helvetica Neue", Arial, sans-serif;
+  margin-bottom: 0;
+}
+
+img {
+  width: 50px;
+}
+
+button {
+  width: 100%;
+}
+
 .wrapper,
 .main {
   margin-bottom: 0;
@@ -8,10 +25,6 @@
 .main {
   width: 100vw;
   border-bottom: none;
-}
-
-h3 {
-  margin-bottom: 10px;
 }
 
 .flash-success,
@@ -102,16 +115,13 @@ input {
   }
 }
 
-img {
-  width: 50px;
-}
-
 #links {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
 
-button {
-  width: 100%;
+#resume {
+  /* border: 1px solid green; */
+  margin-top: 3rem;
 }
