--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -121,4 +121,11 @@ button {
   background-color: $vuegreen;
   font-weight: 800;
   text-transform: uppercase;
+  color: #272822;
+
+  &:hover {
+    background-color: #7dcfaa;
+    transform: scale(0.99);
+    transition: 0.4s ease-in-out;
+  }
 }
