change colour of close button

--- a/src/stylesheets/Project.scss
+++ b/src/stylesheets/Project.scss
@@ -80,9 +80,8 @@ h3 {
   letter-spacing: 0;
 
   &:hover {
-    background-color: #7dcfaa;
-    color: white;
-    transform: scale(0.99);
+    color: #3e8666;
+    transform: scale(0.95);
     transition: 0.4s ease-in-out;
   }
 }
